--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,39 @@
-Flask==0.11.1
-Jinja2==2.8
-MarkupSafe==0.23
-PyYAML==3.12
-Unidecode==0.04.19
-Werkzeug==0.11.11
-argparse==1.2.1
+argcomplete==1.8.2
 base58==0.2.4
-boto3==1.4.1
-botocore==1.4.80
-certifi==2016.9.26
-cffi==1.9.1
-click==6.6
-cryptography==1.5.3
-docutils==0.12
-enum34==1.1.6
-futures==3.0.5
-hjson==2.0.2
-httplib2==0.9.2
-idna==2.1
-ipaddress==1.0.17
+boto3==1.4.4
+botocore==1.5.40
+certifi==2017.7.27.1
+chardet==3.0.4
+click==6.7
+docutils==0.14
+durationpy==0.4
+Flask==0.12.2
+future==0.16.0
+futures==3.1.1
+hjson==2.0.7
+httplib2==0.10.3
+idna==2.5
 itsdangerous==0.24
-jmespath==0.9.0
+Jinja2==2.9.6
+jmespath==0.9.3
 kappa==0.6.0
-lambda-packages==0.10.0
+lambda-packages==0.16.1
+MarkupSafe==1.0
 placebo==0.8.1
-pyOpenSSL==16.2.0
-pyasn1==0.1.9
-pycparser==2.17
-python-dateutil==2.6.0
-python-slugify==1.2.1
-pytz==2016.7
-requests==2.12.3
-s3transfer==0.1.9
+PyJWT==1.5.0
+PySocks==1.6.7
+python-dateutil==2.6.1
+python-slugify==1.2.4
+pytz==2017.2
+PyYAML==3.12
+requests==2.18.3
+s3transfer==0.1.10
 six==1.10.0
-tqdm==4.10.0
-troposphere==1.9.0
+toml==0.9.2
+tqdm==4.14.0
+troposphere==1.9.5
 twilio==5.6.0
-urllib3==1.19.1
-wheel==0.29.0
+Unidecode==0.4.21
+urllib3==1.22
+Werkzeug==0.12.2
 wsgi-request-logger==0.4.6
-wsgiref==0.1.2
-zappa==0.31.0
